--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -38,6 +38,10 @@
   color: $subTitle;
 }
 
+.dark-menu .grey-color {
+  color: $subTitleDark;
+}
+
 .header li a {
   display: block;
   padding: 15px 20px;
